Fixed margins on table-responsive wrapping div on tables with margins

--- a/turret/elements/table.less
+++ b/turret/elements/table.less
@@ -88,6 +88,7 @@ table,
 
 // Table Responsive
 .table-responsive {
+	margin: @table-margin;
 	overflow-x: auto;
 	min-height: 0.01%;
 
@@ -98,6 +99,7 @@ table,
 		border: @table-border;
 
 		> table {
+			margin: 0;
 			border: none;
 
 			// Ensure the content doesn't wrap
